css/components.css
/* 
    This document contains styles for atomic level components. These are the smallest building blocks of a design system. They are the most basic elements that can be combined to create more complex components. This document contains styles for the following components:
        Buttons
        Forms
        Cards
        
        Atomic level components may be used within other sections, and even larger components of the website. PLESE NOTE: the components in the document are architected with the Block Element Modifier syntax (BEM) this is so that styles stay orginized, and are easy to update. 

        Example:
        .MyComponent {}
        .MyComponent__element {}
        .MyComponent--modifier {}
        Note that variants use custom HTML custom attributes to apply styles. Reason being - it doesn't involve any code duplication, and it keeps the stylesheet cleaer
        Example:
        <a class="standard-btn" data-theme="dark">Click me baby one more time</a>
        <a class="standard-btn" data-theme="light">Click me baby one more time</a>

    Status: In Progress
    last modified: 2025-03-23
*/

/* Buttons */
.standard-btn {
  background-color: var(--site-color);
  color: var(--white);
  padding: var(--button-padding);

  border-radius: var(--radius-md);
  font-weight: var(--fw-700);
  cursor: pointer;
  transition: 0.3s ease-in-out;
}

.standard-btn:hover, .standard-btn:focus {
  background-color: var(--site-hover-color);
  border-radius: var(--radius-lg);
}


.standard-btn[data-btn-theme="light"] {
  background-color: var(--white);
  color: var(--site-color);
}
.standard-btn[data-btn-theme="light"]:hover, .standard-btn[data-btn-theme="light"]:focus {
  background-color: var(--primary-900);
  color: var(--black);
} 

.standard-btn[data-btn-theme="outline"] {
  background-color: transparent;
  border: 3px solid var(--site-color);
  color: var(--black);
}

.standard-btn[data-btn-theme="outline"]:hover, .standard-btn[data-btn-theme="outline"]:focus {
  background-color: hsl(from var(--primary-hsl) h s l / .2);
}
/* Cards */
.primary-card {
  background-color: var(--primary-card__bg);
  padding: var(--primary-card__padding);
  display: grid;
  
  gap: var(--primary-card__gap);
  border-radius: var(--primary-card__gap);
}

.primary-card__title {
  font-size: var(--primary-card__heading-sise);  
}

.primary-card__body {
  font-size: var(--primary-card__body-size);
  margin: 0 auto;
}

/* Icon card  */
.icon-card {

  background-color: var(--primary-card__bg);
  padding: var(--primary-card__padding);
  display: flex;
  flex-direction: column;
  gap: var(--primary-card__gap);
  border-radius: var(--primary-card__gap);
}
.icon-card__icon {
  order: -1;
  background-color: var(--chip__bg);
  padding: var(--chip__padding);
  border-radius: var(--chip__radius);
  place-self: flex-start;
}

.icon-card__title {
  font-size: var(--primary-card__heading-sise);  
}

.icon-card__body {
  font-size: var(--primary-card__body-size);
  margin: auto 0;
}

/* Step card */
.step-card {
  background-color: var(--primary-card__bg);
  padding: var(--primary-card__padding);
  display: flex;
  flex-direction: column;
  gap: var(--primary-card__gap);
  border-radius: var(--primary-card__radius);
}
.step-card__title {
  font-size: var(--primary-card__body-size);
}

.step-card__body {
  font-size: var(--primary-card__body-size);
  margin: 0 auto;
}

/* Form elements  */
.contact-form__input {
  background-color: var(--primary-900);
  padding: var(--sp-100) var(--sp-150);
  border: 0;
  border-radius: var(--radius-md);
}

.contact-form__input:focus-visible {
  border: var(--site-focus-style);
}

